--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "859cc876",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,8 @@
     }
    ],
    "source": [
-    "!pip install numpy"
+    "!pip install numpy\n",
+    "## Installing code ##"
    ]
   }
  ],
