Modified intro Python programming code

--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "4a011d3c",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "1f97bae9",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,124 @@
    "cell_type": "markdown",
    "id": "b1c203d1",
    "metadata": {},
-   "source": []
+   "source": [
+    "## What Can Python do?\n",
+    "\n",
+    "- What can Python do? Well, for the purpose of data analytics, I have yet to find a limit!\n",
+    "\n",
+    "- In this class, we will be learning how to use Python as a tool in the data science workflow with specific attention placed on designing and evaluating experiments (more on that in the first week's lecture!)\n",
+    "\n",
+    "- What is the data science workflow? Let's take a look!\n",
+    "\n",
+    "![From R for Data Science 2nd Edition](Data%20Science%20Workflow.png)\n",
+    "\n",
+    "## Importing Data/Data Loading\n",
+    "\n",
+    "- Since a major reason we use Python is for the analysis of data, we need to know how to import/load data from various sources and file formats into our Python programming environment.\n",
+    "\n",
+    "- There are a variety of ways of importing data into our Python programming environment, which largely depend on the type of datafile that you are importing (e.g., Excel file, CSV file, text file, SAS dataset, SPSS dataset, etc.).\n",
+    "\n",
+    "- While there are lots of different files which can be imported into our Python programming environment (Google/GenAI is an excellent resource for searching for code for how to start to do something), we're going to focus on two main types: Excel and CSV\n",
+    "\n",
+    "- For example, let's try importing a CSV file using Python. This file is part of the famous Framingham Heart Study and is called `HEART.csv` and is located in the `Python for Data Science` subfolder that's part of our class GitHub repo.\n",
+    "\n",
+    "- To read in this CSV file using Python, we will use the `read_csv` function, which is part of the famous `pandas` package.\n",
+    "\n",
+    "### Defining Packages and Functions\n",
+    "\n",
+    "- Okay, but before we get into reading in the `HEART` CSV file, what in the world is a package and function??\n",
+    "\n",
+    "- We can think of packages like toolboxes in a mechanic's shop. Each toolbox contains different tools used for specific purposes.\n",
+    "\n",
+    "- To access a particular tool, we have to go to the right toolbox.\n",
+    "    - A toolbox is like a package\n",
+    "    - The tools within the toolbox are like functions within a package\n",
+    "\n",
+    "- Thus, `read_csv` is a tool (function) within the `pandas` toolbox (package).\n",
+    "\n",
+    "- A function can also be thought of like a mathematical function: we provide some input and some specific output is returned. Now, while our Python programming enviroment comes with some functions pre-loaded, almost all others in existence have to be installed from the web, including `pandas`.\n",
+    "\n",
+    "- To install a Python package, we have to use a particular command line function called `pip` which is a recursive acroymn for \"pip installs packages\". \n",
+    "    - In brief, `pip` is a package management system used to install and manage software packages written in Python.\n",
+    "\n",
+    "- Since we need `pandas` to load the `HEART.csv` file, we can install by using:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ea6486b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in c:\\users\\abrow708\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (2.2.1)\n",
+      "Requirement already satisfied: numpy<2,>=1.26.0 in c:\\users\\abrow708\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\abrow708\\appdata\\local\\programs\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\abrow708\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\abrow708\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\abrow708\\appdata\\local\\programs\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0 -> 25.2\n",
+      "[notice] To update, run: C:\\Users\\abrow708\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Install pandas using pip ##\n",
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51a81cb4",
+   "metadata": {},
+   "source": [
+    "- Now, we can load the `pandas` library into our current Python environment by using the `import` function. Note, to access the functions within a package, we have to use the following code syntax: `package_name.function_name`\n",
+    "\n",
+    "- So typically when we import a package, we shorten its name to something to allow for brevity in our code.\n",
+    "    - `pandas` is almost universally imported as `pd`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "51e3e139",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m-------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                     Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n",
+      "\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## Load pandas library ##\u001b[39;00m\n",
+      "\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m## Load HEART CSV ##\u001b[39;00m\n",
+      "\u001b[0;32m      5\u001b[0m heart \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHEART.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "## Load pandas library ##\n",
+    "import pandas as pd\n",
+    "\n",
+    "## Load HEART CSV ##\n",
+    "heart = pd.read_csv(\"HEART.csv\")"
+   ]
   }
  ],
  "metadata": {
