Finalizing Intro to Python for DS content

--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "4a011d3c",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "1f97bae9",
    "metadata": {},
    "outputs": [
@@ -135,13 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "ea6486b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Install pandas using pip ##\n",
-    "%pip install pandas;"
+    "## Remove the # to the left of %pip\n",
+    "## before executing the code ##\n",
+    "\n",
+    "#%pip install pandas"
    ]
   },
   {
@@ -157,33 +160,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "51e3e139",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n",
-      "\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## Load pandas library ##\u001b[39;00m\n",
-      "\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m## Load HEART CSV ##\u001b[39;00m\n",
-      "\u001b[0;32m      5\u001b[0m heart \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHEART.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Load pandas library ##\n",
     "import pandas as pd\n",
     "\n",
     "## Load HEART CSV ##\n",
     "heart = pd.read_csv(\"HEART.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3386bc2d",
+   "metadata": {},
+   "source": [
+    "- Awesome! Now that we've loaded the `heart` dataframe, how do we know that it loaded correctly?\n",
+    "\n",
+    "- There are two general approaches I'd recommend. One is a simple overview of the first few rows of the dataframe which we can obtain via the `.head` function.\n",
+    "\n",
+    "- The second is by using the `.info` function. This is equivalent to `dplyr::glimpse` in R or `PROC CONTENTS` in SAS.\n",
+    "    - Let's check out how we'd use both techniques here!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "16b8d5e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5209, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## First, what are the number of rows\n",
+    "## and columns in the dataframe?\n",
+    "## Let's use the .shape function! ##\n",
+    "\n",
+    "print(heart.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfe8deb7",
+   "metadata": {},
+   "source": [
+    "- Nice! So we know we have 5209 rows (or observations) and 17 columns (or variables).\n",
+    "\n",
+    "- Now let's check out the techniques for inspecting the dataframe!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "70b90a76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Status DeathCause  AgeCHDdiag     Sex  AgeAtStart  Height  Weight  \\\n",
+      "0   Dead      Other         NaN  Female          29   62.50   140.0   \n",
+      "1   Dead     Cancer         NaN  Female          41   59.75   194.0   \n",
+      "2  Alive        NaN         NaN  Female          57   62.25   132.0   \n",
+      "3  Alive        NaN         NaN  Female          39   65.75   158.0   \n",
+      "4  Alive        NaN         NaN    Male          42   66.00   156.0   \n",
+      "\n",
+      "   Diastolic  Systolic    MRW  Smoking  AgeAtDeath  Cholesterol  \\\n",
+      "0         78       124  121.0      0.0        55.0          NaN   \n",
+      "1         92       144  183.0      0.0        57.0        181.0   \n",
+      "2         90       170  114.0     10.0         NaN        250.0   \n",
+      "3         80       128  123.0      0.0         NaN        242.0   \n",
+      "4         76       110  116.0     20.0         NaN        281.0   \n",
+      "\n",
+      "  Chol_Status BP_Status Weight_Status   Smoking_Status  \n",
+      "0         NaN    Normal    Overweight       Non-smoker  \n",
+      "1   Desirable      High    Overweight       Non-smoker  \n",
+      "2        High      High    Overweight  Moderate (6-15)  \n",
+      "3        High    Normal    Overweight       Non-smoker  \n",
+      "4        High   Optimal    Overweight    Heavy (16-25)  \n"
+     ]
+    }
+   ],
+   "source": [
+    "## .head method ##\n",
+    "\n",
+    "print(heart.head(n=5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "414e401e",
+   "metadata": {},
+   "source": [
+    "- With `.head`, we can see that the variable `Sex`, for example, is a *categorical* variable, meaning that it's values are qualities (e.g., `Male` or `Female`).\n",
+    "\n",
+    "- On the other hand, `Height`, seems to be measured with numbers likely implying that it is a *quantitative* variable.\n",
+    "    - We can use `.info` and the `pyjanitor` package to confirm this!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d32ece25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5209 entries, 0 to 5208\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Status          5209 non-null   object \n",
+      " 1   DeathCause      1991 non-null   object \n",
+      " 2   AgeCHDdiag      1449 non-null   float64\n",
+      " 3   Sex             5209 non-null   object \n",
+      " 4   AgeAtStart      5209 non-null   int64  \n",
+      " 5   Height          5203 non-null   float64\n",
+      " 6   Weight          5203 non-null   float64\n",
+      " 7   Diastolic       5209 non-null   int64  \n",
+      " 8   Systolic        5209 non-null   int64  \n",
+      " 9   MRW             5203 non-null   float64\n",
+      " 10  Smoking         5173 non-null   float64\n",
+      " 11  AgeAtDeath      1991 non-null   float64\n",
+      " 12  Cholesterol     5057 non-null   float64\n",
+      " 13  Chol_Status     5057 non-null   object \n",
+      " 14  BP_Status       5209 non-null   object \n",
+      " 15  Weight_Status   5203 non-null   object \n",
+      " 16  Smoking_Status  5173 non-null   object \n",
+      "dtypes: float64(7), int64(3), object(7)\n",
+      "memory usage: 691.9+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "## .info method ##\n",
+    "\n",
+    "print(heart.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5389521b",
+   "metadata": {},
+   "source": [
+    "- In this output, look again at the `Sex` variable. We see that it has 5209 non-null (non-missing) values, meaning that for every row in the dataframe, we have a valid, non-missing value!\n",
+    "\n",
+    "- Then next to this information, we can see that its datatype is `object`. This is Python's naming convention for a nominal, categorical variable.\n",
+    "\n",
+    "- For `Height`, we see that is has 6 missing values ($5209 - 5203 = 6$). We also see that Python considers it `float64`. This is Python's naming convention for a continuous, quantitative variable.\n",
+    "    - Notice that `AgeAtStart` is considered `int64`. This is an integer, or discrete, quantitative variable designation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f49072e9",
+   "metadata": {},
+   "source": [
+    "## Working with Dataframes\n",
+    "\n",
+    "- Let's say I wanted to find the average or mean of the `AgeAtStart` column from the `heart` dataframe. How would I go about doing that?\n",
+    "\n",
+    "- First, I need to know how to refer to that single variable by itself.\n",
+    "\n",
+    "- To do this, we make use of the square bracket notation. Specifically, we can call a single column within a dataframe by using the following syntax: `df['Variable_Name']`.\n",
+    "\n",
+    "- You can think of the square bracket like a door to your home. The name of the dataframe is the house itself, the brackets are the door, and the variable name is the person we want to talk to inside of the house.\n",
+    "    - So the structure is `house['Person']`.\n",
+    "\n",
+    "- If we run the following command, let's see what happens:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8eb118a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       29\n",
+      "1       41\n",
+      "2       57\n",
+      "3       39\n",
+      "4       42\n",
+      "        ..\n",
+      "5204    49\n",
+      "5205    42\n",
+      "5206    51\n",
+      "5207    36\n",
+      "5208    36\n",
+      "Name: AgeAtStart, Length: 5209, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "## house[\"Person\"] ##\n",
+    "\n",
+    "print(heart['AgeAtStart'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd58c672",
+   "metadata": {},
+   "source": [
+    "- If we go back and look at the output of the `.head` function, we can see that the values in this output vector correspond to the output we had from that function as well.\n",
+    "\n",
+    "- Note, the first element in Python (and many other programming languages) is coded as 0 rather than 1. There are some historical reasons for this but it ends up serving convenience purposes in some operations (i.e., range and length calculations) as well.\n",
+    "\n",
+    "- Okay so now that we've established how to directly refer to a variable within a dataframe, how do we calculate the mean? Here, we are going to use the popular `numpy` package to help us out!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f084455a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.07\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Install numpy. Remember\n",
+    "## to remove # from the left\n",
+    "## of the following line of \n",
+    "## code before executing ##\n",
+    "\n",
+    "#%pip install numpy\n",
+    "\n",
+    "## Load numpy ##\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "## Calculate Mean AgeAtStart ##\n",
+    "\n",
+    "print(round(\n",
+    "    np.mean(heart['AgeAtStart']),\n",
+    "    2)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a95625ee",
+   "metadata": {},
+   "source": [
+    "- So the mean age at start is 44.07 years old!\n",
+    "\n",
+    "## Tidying Data\n",
+    "\n",
+    "### Selecting Columns\n",
+    "\n",
+    "- Now, let's say I have a large dataframe with lots of columns of information, as you might see in your own careers.\n",
+    "\n",
+    "- But, for whatever analysis I'm wanting to do, I don't need all of the columns, just a few.\n",
+    "\n",
+    "- In such a case, it might be useful to subset the dataframe and select only the columns we need.\n",
+    "\n",
+    "- How do we go about doing this? Like many things in Python, there are a few different ways to yield the same result, but I'm going to show you what I consider the most straightforward method, which uses the `house[\"Person\"]` syntax we worked with previously.\n",
+    "\n",
+    "- Let's say using the `heart` dataframe, I want to create a new dataframe which only contains the last four columns: `Chol_Status`, `BP_Status`, `Weight_Status`, and `Smoking_Status`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f1f80e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5209 entries, 0 to 5208\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   Chol_Status     5057 non-null   object\n",
+      " 1   BP_Status       5209 non-null   object\n",
+      " 2   Weight_Status   5203 non-null   object\n",
+      " 3   Smoking_Status  5173 non-null   object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 162.9+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Creat New Dataframe using subset of \n",
+    "## columns ##\n",
+    "\n",
+    "heart1 = heart[['Chol_Status',\n",
+    "                'BP_Status',\n",
+    "                'Weight_Status',\n",
+    "                'Smoking_Status']]\n",
+    "\n",
+    "print(heart1.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a348490",
+   "metadata": {},
+   "source": [
+    "- We can see that the column selection worked because we have the same number of rows (5209) but now only those four columns we specified.\n",
+    "\n",
+    "### Filtering Rows\n",
+    "\n",
+    "- We just learned how to subset columns. What if we wanted to subset by values in the rows?\n",
+    "\n",
+    "- For example, let's say in the new `heart1` dataframe we just created, we want to create a new dataframe where we only have those participants whose `Weight_Status` is \"Overweight.\"\n",
+    "\n",
+    "- Again, there are a few different approaches, but I would recommend using what we've learned so far with the `house['Person']` syntax.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "421a2b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3550, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Create new dataframe from heart1\n",
+    "## where participants' Weight_Status == \"Overweight\" ##\n",
+    "\n",
+    "heart2 = heart1[heart1['Weight_Status'] == \"Overweight\"]\n",
+    "\n",
+    "print(heart2.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72a9b45a",
+   "metadata": {},
+   "source": [
+    "- Here we can see that the number of columns is the same (4) but now the number of rows is smaller than the total number in the `heart1` dataframe.\n",
+    "    - How can we confirm that the filtering worked correctly?\n",
+    "\n",
+    "- One strategy is by counting up the number of participants in the `heart1` dataframe whose `Weight_Status` was considered \"Overweight\". \n",
+    "\n",
+    "- If that number matches the number of rows in `heart2`, then we can feel confident that the filtering worked the way we expected it to.\n",
+    "    - Let's try using the `.value_counts` function to check our work!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "97afb0a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight_Status\n",
+      "Overweight     3550\n",
+      "Normal         1472\n",
+      "Underweight     181\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Tabulate Number of Overweight Participants\n",
+    "## in heart1 dataframe ##\n",
+    "\n",
+    "print(heart1['Weight_Status'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "742d3057",
+   "metadata": {},
+   "source": [
+    "- Since the number of Overweight participants in `heart1` (3550) is equal to the number of rows in `heart2`, we can feel confident our filtering worked the way we anticipated!\n",
+    "\n",
+    "## What is \"Tidy\" Data?\n",
+    "\n",
+    "- Once we have imported data, our next job is often to \"tidy\" it. Tidy data refers to data structure or how information is stored.\n",
+    "\n",
+    "- A tidy dataframe has the following characteristics:\n",
+    "    1. Each variable is a column; each column is a variable.\n",
+    "    2. Each observation is a row; each row is an observation.\n",
+    "    3. Each value has is a cell; each cell is a single value.\n",
+    "\n",
+    "![From R for Data Science 2nd Edition](Tidy%20Data%20Structure.png)\n",
+    "\n",
+    "- Why should we care about having our data in tidy format? There are two key reasons:\n",
+    "\n",
+    "- First, consistency. It's much easier to work with datasets if we know what format they're in.\n",
+    "\n",
+    "- Second, this is generally the structure most Python functions want the data to be in to work correctly."
    ]
   }
  ],
