--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -13,6 +13,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba95023e",
+   "metadata": {},
+   "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Python for Data Science/Introduction to Python for Data Science.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ace21525",
    "metadata": {},
    "source": [
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "id": "4a011d3c",
    "metadata": {},
    "outputs": [
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "id": "1f97bae9",
    "metadata": {},
    "outputs": [
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "id": "ea6486b8",
    "metadata": {},
    "outputs": [],
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "id": "51e3e139",
    "metadata": {},
    "outputs": [],
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "id": "16b8d5e2",
    "metadata": {},
    "outputs": [
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "id": "70b90a76",
    "metadata": {},
    "outputs": [
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "id": "d32ece25",
    "metadata": {},
    "outputs": [
@@ -345,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "id": "8eb118a1",
    "metadata": {},
    "outputs": [
@@ -388,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "id": "f084455a",
    "metadata": {},
    "outputs": [
@@ -444,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "id": "f1f80e4f",
    "metadata": {},
    "outputs": [
@@ -497,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "id": "421a2b96",
    "metadata": {},
    "outputs": [
@@ -534,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "id": "97afb0a1",
    "metadata": {},
    "outputs": [
