Fixed clone code

--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1452b8fe",
    "metadata": {},
    "outputs": [
@@ -51,9 +51,13 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design.git\n",
+    "## Remove the # from the left of the below\n",
+    "## lines of code and execute. This will clone the class\n",
+    "## repository to your Colab. ##\n",
     "\n",
-    "%cd STAT-7220-Applied-Experimental-Design"
+    "#!git clone https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design.git\n",
+    "\n",
+    "#%cd STAT-7220-Applied-Experimental-Design"
    ]
   },
   {
