Remember to fully set current drive

--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -24,32 +24,7 @@
    "execution_count": null,
    "id": "1452b8fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d:\\KSU\\Teaching\\STAT 7220\\STAT-7220-Applied-Experimental-Design\\STAT-7220-Applied-Experimental-Design\\Python for Data Science\\STAT-7220-Applied-Experimental-Design\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'STAT-7220-Applied-Experimental-Design'...\n",
-      "Updating files:  90% (57/63)\n",
-      "Updating files:  92% (58/63)\n",
-      "Updating files:  93% (59/63)\n",
-      "Updating files:  95% (60/63)\n",
-      "Updating files:  96% (61/63)\n",
-      "Updating files:  98% (62/63)\n",
-      "Updating files: 100% (63/63)\n",
-      "Updating files: 100% (63/63), done.\n",
-      "c:\\Users\\abrow708\\AppData\\Local\\Programs\\Positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3\\IPython\\core\\magics\\osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Remove the # from the left of the below\n",
     "## lines of code and execute. This will clone the class\n",
@@ -57,7 +32,7 @@
     "\n",
     "#!git clone https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design.git\n",
     "\n",
-    "#%cd STAT-7220-Applied-Experimental-Design"
+    "#%cd /content/STAT-7220-Applied-Experimental-Design/Python for Data Science"
    ]
   },
   {
@@ -85,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "4a011d3c",
    "metadata": {},
    "outputs": [
@@ -115,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "1f97bae9",
    "metadata": {},
    "outputs": [
@@ -184,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "ea6486b8",
    "metadata": {},
    "outputs": [],
@@ -209,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "51e3e139",
    "metadata": {},
    "outputs": [
@@ -220,7 +195,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn[17], line 5\u001b[0m\n",
+      "Cell \u001b[1;32mIn[29], line 5\u001b[0m\n",
       "\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
       "\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m## Load HEART CSV ##\u001b[39;00m\n",
       "\u001b[1;32m----> 5\u001b[0m heart \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHEART.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
